Updated 8 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -216,13 +216,13 @@
     <!--  3 IMAGE SECTION -->
     <div class="row markets-img-section">
       <div class="col-md-4 img-one">
-        <img class="img-fluid first-img editable" data-cms-index="6" data-cms-original-src="/uploads/img-2590.jpg" data-cms-original-srcset="/uploads/img-2590.jpg 366w, /uploads/img-2590@2x.jpg 732w" data-cms-source="/lyndale-market.html" src="/uploads/img-2590.jpg?_cchid=47f40f4dc21ad9c0169028138e7dad14" srcset="/uploads/img-2590.jpg?_cchid=47f40f4dc21ad9c0169028138e7dad14 366w, /uploads/img-2590@2x.jpg?_cchid=52eab91e43842f28e6b7044f68e12e54 732w" width="366">
+        <img class="img-fluid first-img editable" data-cms-index="6" data-cms-original-src="/uploads/bb009f2d-ccf2-4027-a475-44a40273915e.jpg" data-cms-original-srcset="/uploads/bb009f2d-ccf2-4027-a475-44a40273915e.jpg 897w, /uploads/bb009f2d-ccf2-4027-a475-44a40273915e@2x.jpg 1794w" data-cms-source="/lyndale-market.html" src="/uploads/bb009f2d-ccf2-4027-a475-44a40273915e.jpg?_cchid=04339af476658d65783827d940ff396c" srcset="/uploads/bb009f2d-ccf2-4027-a475-44a40273915e.jpg?_cchid=04339af476658d65783827d940ff396c 897w, /uploads/bb009f2d-ccf2-4027-a475-44a40273915e@2x.jpg?_cchid=fc8944cdf3228815c578122a6bfe3aab 1794w" width="366">
       </div>
       <div class="col-md-4 img-two">
-        <img class="img-fluid first-img editable" data-cms-index="7" data-cms-original-src="/assets/img/LyndaleMarketImage2.png" data-cms-source="/lyndale-market.html" src="/assets/img/LyndaleMarketImage2.png?_cchid=4b572dd4b6dbf0bb743d5748149a880a">
+        <img class="img-fluid first-img editable" data-cms-index="7" data-cms-original-src="/uploads/winter-market3.jpg" data-cms-original-srcset="/uploads/winter-market3.jpg 367w, /uploads/winter-market3@2x.jpg 734w" data-cms-source="/lyndale-market.html" src="/uploads/winter-market3.jpg?_cchid=fed8777e149673604eef0d7c4e144c63" srcset="/uploads/winter-market3.jpg?_cchid=fed8777e149673604eef0d7c4e144c63 367w, /uploads/winter-market3@2x.jpg?_cchid=cf270c709781189314c85c0571b72269 734w" width="367">
       </div>
       <div class="col-md-4 img-three big-me">
-        <img class="img-fluid first-img editable" data-cms-index="8" data-cms-original-src="/assets/img/LyndaleMarketImage3.png" data-cms-source="/lyndale-market.html" src="/assets/img/LyndaleMarketImage3.png?_cchid=f6cae3edf765be88f78e5d59648ec55a">
+        <img class="img-fluid first-img editable" data-cms-index="8" data-cms-original-src="/uploads/winter-market1.jpg" data-cms-original-srcset="/uploads/winter-market1.jpg 367w, /uploads/winter-market1@2x.jpg 734w" data-cms-source="/lyndale-market.html" src="/uploads/winter-market1.jpg?_cchid=b6fff7d27cb72c2da34e64bcdad5dc6f" srcset="/uploads/winter-market1.jpg?_cchid=b6fff7d27cb72c2da34e64bcdad5dc6f 367w, /uploads/winter-market1@2x.jpg?_cchid=e0e404d5b1cf0f42a2b6bf57d7cd6ea9 734w" width="367">
       </div>
     </div>
   </div>
