Updated 12 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"url":"https://www.mplsfarmersmarket.com/","headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"name":"Minneapolis Farmers Market","@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
+{"sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","headline":"Home","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -204,18 +204,15 @@
     <div class="col-12 col-lg-6 home-market-info left-column editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
       <p>Select Dates 9AM - NOON | Rain, Snow or Shine<br>EBT Closed for the season</p>
-      <p>December 4th &amp; 5th, 11th &amp; 12th, 18th &amp;19th</p>
-      <p>January 8th &amp; 22nd</p>
       <p>February 5th &amp; 19th</p>
       <p>March 5th &amp; 19th</p>
       <p>April 2nd &amp; 3rd, 9th &amp; 10th, 16th, 23rd &amp; 24th</p>
-      <p>Christmas Tree Vendors are OPEN DAILY 7AM -9PM!</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
     </div>
     <div class="col-12 col-lg-6 home-market-info home-market-2 editable" data-cms-index="1" data-cms-source="/_includes/home-market-info.html">
       <h5>Nicollet Mall Market</h5>
-      <p><strong>Closed for the 2021 Season</strong></p>
+      <p><strong>Stay Tuned for 2022 Schedule</strong></p>
       <p class="market-address">Nicollet Mall, in Downtown Minneapolis<br>between 6th and 9th streets</p>
       <p><a class="btn btn-lg theme-button" href="/nicollet-market" role="button">Learn More</a></p>
     </div>
@@ -382,7 +379,7 @@
     </div>
     <div class="other-footer-links row mx-0">
       <div class="col-12">
-        <p>© 2021 Minneapolis Farmers Market</p>
+        <p>© 2022 Minneapolis Farmers Market</p>
       </div>
     </div>
     <div class="made-in-mn">
