Updated 16 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","headline":"Home","@context":"https://schema.org"}</script>
+{"sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/","name":"Minneapolis Farmers Market","headline":"Home","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -203,9 +203,7 @@
   <div class="market-info-wrapper">
     <div class="col-12 col-lg-6 home-market-info left-column editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
-      <p>Select Dates 9AM - NOON | Rain, Snow or Shine<br>EBT Closed for the season</p>
-      <p>February 5th &amp; 19th</p>
-      <p>March 5th &amp; 19th</p>
+      <p>Select Dates 9AM - NOON | Rain, Snow or Shine</p>
       <p>April 2nd &amp; 3rd, 9th &amp; 10th, 16th, 23rd &amp; 24th</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
@@ -397,10 +395,10 @@
 <script crossorigin="anonymous" defer="" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 <script crossorigin="anonymous" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script data-cms-original-src="/assets/js/jquery.navigation.js" src="/assets/js/jquery.navigation.js?_cchid=36afaeb46ac67bdf3771de5c905e9ae8"></script>
-<script data-cms-original-src="/assets/js/jquery.vendorFilter.js" src="/assets/js/jquery.vendorFilter.js?_cchid=de3b7b02628b227ac41edccebfcc61b8"></script>
-<script data-cms-original-src="/assets/js/instagram-scroll.js" src="/assets/js/instagram-scroll.js?_cchid=2260657113fd31e857bc30cbeec7db0a"></script>
-<script data-cms-original-src="/assets/js/mailchimp.js" src="/assets/js/mailchimp.js?_cchid=3a14571e533e0db3dc1986e577c2f524"></script>
+<script data-cms-original-src="/assets/js/jquery.navigation.js" src="/assets/js/jquery.navigation.js?_cchid=42310be1e7ed6a598997fceb5c698415"></script>
+<script data-cms-original-src="/assets/js/jquery.vendorFilter.js" src="/assets/js/jquery.vendorFilter.js?_cchid=b3ef67c92c9c25e8020efb352134f4e9"></script>
+<script data-cms-original-src="/assets/js/instagram-scroll.js" src="/assets/js/instagram-scroll.js?_cchid=06aec1de649acf3456a91dd9e400055c"></script>
+<script data-cms-original-src="/assets/js/mailchimp.js" src="/assets/js/mailchimp.js?_cchid=c51e50d2f493f1f8b5571477f6a550ab"></script>
 
   
 
