Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -203,9 +203,8 @@
   <div class="market-info-wrapper">
     <div class="col-12 col-lg-6 home-market-info left-column editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
-      <p>Select Dates 9AM - NOON | OPEN Rain, Snow or Shine</p>
-      <p>April 2nd &amp; 3rd, 9th &amp; 10th, 16th, 23rd &amp; 24th</p>
-      <p>*Closed on Easter Sunday</p>
+      <p>Starting this Saturday, April 30th!</p>
+      <p><strong>Open Daily Rain or Shine 6 am to 1 pm</strong></p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
     </div>
