Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -191,10 +191,10 @@
         MPLS Farmers Market
       </h2>
       <h5 class="editable" data-cms-index="1" data-cms-source="/lyndale-market.html">
-        <strong>Winter HOURS</strong>
+        <b>OPEN DAILY 6AM TO 1PM RAIN OR SHINE</b>
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        Select Dates 9AM - NOON | Rain, Snow or Shine<br>X-mas tree vendors starting daily 1 week before Thanksgiving<br>EBT Closed for the season
+        SNAP/EBT Hours: 8am to 1pm Thursday - Sunday
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
