Updated 4 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -228,13 +228,13 @@
   </div>
 
   <div class="lyndale-page-hist editable" data-cms-index="9" data-cms-source="/lyndale-market.html">
-    <div class="col-12 col-lg-6 lyndale-hist-img"><img alt="History" class="img-fluid editable" data-cms-index="10" data-cms-original-src="/uploads/wintermarketschedule-3.jpg" data-cms-source="/lyndale-market.html" src="/uploads/wintermarketschedule-3.jpg?_cchid=2fa06b3a4112089b03a5325c97e7638a" width="721"></div>
+    <div class="col-12 col-lg-6 lyndale-hist-img"><img alt="History" class="img-fluid editable" data-cms-index="10" data-cms-original-src="/uploads/screen-shot-2022-04-27-at-5-04-23-pm.png" data-cms-source="/lyndale-market.html" src="/uploads/screen-shot-2022-04-27-at-5-04-23-pm.png?_cchid=c30fe04a119372f6c15f3043989ae2cb" width="721"></div>
     <div class="col-12 col-lg-5 lyndale-hist-text">
       <h3 class="editable" data-cms-index="11" data-cms-source="/lyndale-market.html">
         What's in-season
       </h3>
       <p class="editable" data-cms-index="12" data-cms-source="/lyndale-market.html">
-        Christmas Tree vendors will be open daily starting one week before Thanksgiving.<br><br>Eggs, fresh &amp; smoked Trout, Meat, Cheese, Maple Syrup, and more!
+        Flower, Herbs &amp; Vegetable Starter Plants are here!<br>We are excited to welcome back our vegetable growers. Vegetable growers are showcasing beautiful spring onions, lettuce, radishes, and more, despite the late spring, we are experiencing!&nbsp;<br><br>We are also welcoming back our reseller vendors to bring access to affordable fresh produce to our community.&nbsp;
       </p><a class="btn btn-lg theme-button editable" data-cms-index="13" data-cms-source="/lyndale-market.html" href="https://minnesotagrown.com/whats-in-season/" id="lyn-hist-button" rel="noopener" role="button" target="_blank">Learn more</a>
     </div>
   </div>
