--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -202,7 +202,7 @@
       </div>
     </div>
     <div class="col-12 col-lg-7 lyn-market-page-hero-img">
-      <img class="img-fluid editable" data-cms-index="4" data-cms-original-src="/uploads/img-6841-1.jpg" data-cms-source="/lyndale-market.html" src="/uploads/img-6841-1.jpg?_cchid=fda8d6f00943b2fc5ec641e003de7e25" width="890">
+      <img class="img-fluid editable" data-cms-index="4" data-cms-original-src="/uploads/screen-shot-2022-04-27-at-5-04-53-pm.png" data-cms-source="/lyndale-market.html" src="/uploads/screen-shot-2022-04-27-at-5-04-53-pm.png?_cchid=d1f5f3339f202b4b521b1d91e11e2542" width="890">
     </div>
   </div>
   <div class="market-bg-wrapper">
@@ -216,13 +216,13 @@
     <!--  3 IMAGE SECTION -->
     <div class="row markets-img-section">
       <div class="col-md-4 img-one">
-        <img class="img-fluid first-img editable" data-cms-index="6" data-cms-original-src="/uploads/bb009f2d-ccf2-4027-a475-44a40273915e.jpg" data-cms-original-srcset="/uploads/bb009f2d-ccf2-4027-a475-44a40273915e.jpg 897w, /uploads/bb009f2d-ccf2-4027-a475-44a40273915e@2x.jpg 1794w" data-cms-source="/lyndale-market.html" src="/uploads/bb009f2d-ccf2-4027-a475-44a40273915e.jpg?_cchid=04339af476658d65783827d940ff396c" srcset="/uploads/bb009f2d-ccf2-4027-a475-44a40273915e.jpg?_cchid=04339af476658d65783827d940ff396c 897w, /uploads/bb009f2d-ccf2-4027-a475-44a40273915e@2x.jpg?_cchid=fc8944cdf3228815c578122a6bfe3aab 1794w" width="366">
+        <img class="img-fluid first-img editable" data-cms-index="6" data-cms-original-src="/uploads/screen-shot-2022-04-27-at-5-02-22-pm.png" data-cms-source="/lyndale-market.html" src="/uploads/screen-shot-2022-04-27-at-5-02-22-pm.png?_cchid=7c4b5d1ac4bd1ffea73b778a2157296b" width="366">
       </div>
       <div class="col-md-4 img-two">
-        <img class="img-fluid first-img editable" data-cms-index="7" data-cms-original-src="/uploads/winter-market3.jpg" data-cms-original-srcset="/uploads/winter-market3.jpg 367w, /uploads/winter-market3@2x.jpg 734w" data-cms-source="/lyndale-market.html" src="/uploads/winter-market3.jpg?_cchid=fed8777e149673604eef0d7c4e144c63" srcset="/uploads/winter-market3.jpg?_cchid=fed8777e149673604eef0d7c4e144c63 367w, /uploads/winter-market3@2x.jpg?_cchid=cf270c709781189314c85c0571b72269 734w" width="367">
+        <img class="img-fluid first-img editable" data-cms-index="7" data-cms-original-src="/uploads/img-3567-1.jpg" data-cms-source="/lyndale-market.html" src="/uploads/img-3567-1.jpg?_cchid=ff977f68f6d436493109b4e070cc0a16" width="367">
       </div>
       <div class="col-md-4 img-three big-me">
-        <img class="img-fluid first-img editable" data-cms-index="8" data-cms-original-src="/uploads/winter-market1.jpg" data-cms-original-srcset="/uploads/winter-market1.jpg 367w, /uploads/winter-market1@2x.jpg 734w" data-cms-source="/lyndale-market.html" src="/uploads/winter-market1.jpg?_cchid=b6fff7d27cb72c2da34e64bcdad5dc6f" srcset="/uploads/winter-market1.jpg?_cchid=b6fff7d27cb72c2da34e64bcdad5dc6f 367w, /uploads/winter-market1@2x.jpg?_cchid=e0e404d5b1cf0f42a2b6bf57d7cd6ea9 734w" width="367">
+        <img class="img-fluid first-img editable" data-cms-index="8" data-cms-original-src="/uploads/img-4871.jpg" data-cms-original-srcset="/uploads/img-4871.jpg 1410w, /uploads/img-4871@2x.jpg 2820w" data-cms-source="/lyndale-market.html" src="/uploads/img-4871.jpg?_cchid=15a92afa39b1c9de0dbecf79ed3345fe" srcset="/uploads/img-4871.jpg?_cchid=15a92afa39b1c9de0dbecf79ed3345fe 1410w, /uploads/img-4871@2x.jpg?_cchid=ce2e5439c5ca2ce1e552b9d65b4d9071 2820w" width="367">
       </div>
     </div>
   </div>
