--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -194,7 +194,7 @@
         <b>OPEN DAILY 6AM TO 1PM RAIN OR SHINE</b>
       </h5>
       <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/lyndale-market.html">
-        SNAP/EBT Hours: 8am to 1pm Thursday - Sunday
+        SNAP/EBT Hours: 8am to 1pm Thursday - Sunday<br>*Vendor availability varies
       </p>
       <p class="market-page-address editable" data-cms-index="3" data-cms-source="/lyndale-market.html">
         312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405
