Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -234,7 +234,7 @@
         What's in-season
       </h3>
       <p class="editable" data-cms-index="12" data-cms-source="/lyndale-market.html">
-        Flower, Herbs &amp; Vegetable Starter Plants are here!<br>We are excited to welcome back our vegetable growers. Vegetable growers are showcasing beautiful spring onions, lettuce, radishes, and more, despite the late spring, we are experiencing!&nbsp;<br><br>We are also welcoming back our reseller vendors to bring access to affordable fresh produce to our community.&nbsp;
+        Flower, Herbs &amp; Vegetable Starter Plants are here!<br>We are excited to welcome back our vegetable growers. Despite the late spring, our vegetable growers are showcasing beautiful spring onions, lettuce, radishes, and more!<br><br>We are also welcoming back our reseller vendors to bring access to affordable fresh produce to our community.&nbsp;
       </p><a class="btn btn-lg theme-button editable" data-cms-index="13" data-cms-source="/lyndale-market.html" href="https://minnesotagrown.com/whats-in-season/" id="lyn-hist-button" rel="noopener" role="button" target="_blank">Learn more</a>
     </div>
   </div>
