--- a/contact.html
+++ b/contact.html
@@ -206,7 +206,7 @@
       <strong>Phone:</strong> 612-333-1718
     </p>
     <p class="editable" data-cms-index="5" data-cms-source="/_includes/contact-content.html">
-      <strong>Email:</strong><br><a href="mailto:sina@mplsfarmersmarket.com">info@mplsfarmersmarket.com</a>
+      <strong>Email:</strong><br><a href="mailto:sina@mplsfarmersmarket.com">sina@mplsfarmersmarket.com</a>
     </p>
 </div>
 
