--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@
   <div class="market-info-wrapper">
     <div class="col-12 col-lg-6 home-market-info left-column editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
-      <p>Starting this Saturday, April 30th!</p>
+      <p>We're sorry, no dogs are allowed!</p>
       <p><strong>Open Daily Rain or Shine 6 am to 1 pm</strong></p>
+      <p>Monday - Friday we have a limited amount of vendors, depending on the seasonality of produce.&nbsp;</p>
+      <p>Saturday &amp; Sundays we have a full Market.&nbsp;</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
     </div>
