Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -234,7 +234,7 @@
         Farm to Market Podcast
       </h3>
       <p class="editable" data-cms-index="12" data-cms-source="/lyndale-market.html">
-        We are excited to introduce a new project called Farm to Market: a podcast about farmers and the people who love them!<br>This program is meant to create a stronger connection between our vendors and the community we serve. As a listener, you can expect to hear an entirely new side of the people who work hard to make our market a reality.<br>Stay tuned… The first episode is available on Apple Music and Spotify on May 31st!
+        We are excited to introduce a new project called Farm to Market: a podcast about farmers and the people who love them!<br>This program is meant to create a stronger connection between our vendors and the community we serve. As a listener, you can expect to hear an entirely new side of the people who work hard to make our market a reality.<br><br>The first episode is available on Apple Music and Spotify on May 31st!
       </p><a class="btn btn-lg theme-button editable" data-cms-index="13" data-cms-source="/lyndale-market.html" href="https://linktr.ee/mplsfarmersmarket" id="lyn-hist-button" rel="noopener" role="button" target="_blank">Learn more</a>
     </div>
   </div>
