Updated 12 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/","name":"Minneapolis Farmers Market","headline":"Home","@context":"https://schema.org"}</script>
+{"headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -212,7 +212,8 @@
     </div>
     <div class="col-12 col-lg-6 home-market-info home-market-2 editable" data-cms-index="1" data-cms-source="/_includes/home-market-info.html">
       <h5>Nicollet Mall Market</h5>
-      <p><strong>Stay Tuned for 2022 Schedule</strong></p>
+      <p><strong>Open every Thursday,&nbsp;<strong>June 16-August 25</strong></strong></p>
+      <p><strong> Rain or Shine 10 am to 2:30 pm</strong></p>
       <p class="market-address">Nicollet Mall, in Downtown Minneapolis<br>between 6th and 9th streets</p>
       <p><a class="btn btn-lg theme-button" href="/nicollet-market" role="button">Learn More</a></p>
     </div>
