Updated 2 files via CloudCannon

--- a/nicollet-market.html
+++ b/nicollet-market.html
@@ -191,10 +191,10 @@
           Nicollet Mall Market
         </h2>
         <h5 class="editable" data-cms-index="1" data-cms-source="/nicollet-market.html">
-          <strong>Closed for the 2021 Season</strong>
+          <strong><strong>Open every Thursday,&nbsp;<strong>June 16-August 25</strong></strong></strong>
         </h5>
         <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/nicollet-market.html">
-          6 am to 2pm | Rain or Shine<br>EBT Hours 8 am to 1 pm
+          10 am to 2:30 pm | Rain or Shine<br>EBT Hours 10 am to 2:30 pm
         </p>
         <p class="market-page-address editable" data-cms-index="3" data-cms-source="/nicollet-market.html">
           Nicollet Mall, in Downtown Minneapolis<br>between 6th and 9th streets
