Updated 2 files via CloudCannon

--- a/nicollet-market.html
+++ b/nicollet-market.html
@@ -191,7 +191,7 @@
           Nicollet Mall Market
         </h2>
         <h5 class="editable" data-cms-index="1" data-cms-source="/nicollet-market.html">
-          <strong><strong>Open every Thursday,&nbsp;<strong>June 16-August 25</strong></strong></strong>
+          <strong><strong>Open every Thursday, Starting&nbsp;<strong>June 16</strong></strong></strong>
         </h5>
         <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/nicollet-market.html">
           10 am to 2:30 pm | Rain or Shine<br>EBT Hours 10 am to 2:30 pm
