Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </div>
     <div class="col-12 col-lg-6 home-market-info home-market-2 editable" data-cms-index="1" data-cms-source="/_includes/home-market-info.html">
       <h5>Nicollet Mall Market</h5>
-      <p><strong>Open every Thursday,&nbsp;<strong>June 16-August 25</strong></strong></p>
+      <p><strong>Open every Thursday,&nbsp;<strong>June 16</strong></strong></p>
       <p><strong> Rain or Shine 10 am to 2:30 pm</strong></p>
       <p class="market-address">Nicollet Mall, in Downtown Minneapolis<br>between 6th and 9th streets</p>
       <p><a class="btn btn-lg theme-button" href="/nicollet-market" role="button">Learn More</a></p>
