Updated 4 files via CloudCannon

--- a/ebt-guidelines.html
+++ b/ebt-guidelines.html
@@ -250,6 +250,12 @@
           The FMNP vouchers are accepted at the discretion of each individual vendor and exchanges and refunds are at the discretion of the vendor. Please look for a sign that says “Farmers Market Nutrition Program Checks Accepted Here” or simply ask the vendor if they accept FMNP Vouchers. Vouchers can only be used to purchase MN Grown produce items (fresh fruits, vegetables and cut herbs). They can not be exchanged for tokens like SNAP/EBT benefits or cash. SNAP/EBT Tokens and FMNP Vouchers cannot be exchanged for US currency.
         </p>
       </div>
+      <div class="editable" data-cms-index="8" data-cms-source="/ebt-guidelines.html">
+        <h2 class="ebt-text mb-3">MPLS Farmers Market Food Access Program is sponsored by:</h2>
+        <a href="https://www.uhccommunityplan.com/" target="_blank">
+          <img alt="United Health Care logo" data-cms-original-src="/assets/img/uhc_logo.svg" src="/assets/img/uhc_logo.svg?_cchid=605182332ea17583e5adb8b7605847cc" style="width: 200px;">
+        </a>
+      </div>
     </div>
   </div>
   <div class="newsletter-optin">
