--- a/vendors.html
+++ b/vendors.html
@@ -190,16 +190,16 @@
         <h2 class="vendors-title editable" data-cms-index="0" data-cms-source="/vendors.html">
           Check out our vendors for the 2022 season
         </h2>
-        <p>
+        <p class="editable" data-cms-index="1" data-cms-source="/vendors.html">
           Our market vendors’ attendance and stall assignments vary on a daily basis and depend on the seasonality of their product. We host vendors that have a legacy of over 5 generations of farming and also allow space for new businesses to get their start at our market. Browse our list of vendors below to learn more.
         </p>
-        <p>
+        <p class="editable" data-cms-index="2" data-cms-source="/vendors.html">
           Interested in becoming a vendor? Contact our general manager at <a>info@mplsfarmersmarket.com</a>. We are currently accepting applications for local growers.
         </p>
       </div>
     </div>
     <div class="col-12 col-lg-6 hero-image">
-      <img class="img-fluid editable float-right" data-cms-index="1" data-cms-original-src="/assets/img/VendorHeroImage.png" data-cms-source="/vendors.html" src="/assets/img/VendorHeroImage.png?_cchid=203367e85a40ab0a0439a30218793206">
+      <img class="img-fluid editable float-right" data-cms-index="3" data-cms-original-src="/assets/img/VendorHeroImage.png" data-cms-source="/vendors.html" src="/assets/img/VendorHeroImage.png?_cchid=203367e85a40ab0a0439a30218793206">
     </div>
   </div>
   <div class="row">
