--- a/vendors.html
+++ b/vendors.html
@@ -191,10 +191,10 @@
           Check out our vendors for the 2022 season
         </h2>
         <p class="editable" data-cms-index="1" data-cms-source="/vendors.html">
-          Our market vendors’ attendance and stall assignments vary on a daily basis and depend on the seasonality of their product. We host vendors that have a legacy of over 5 generations of farming and also allow space for new businesses to get their start at our market. Browse our list of vendors below to learn more.
+          Our market vendors’ attendance and stall assignments vary on a daily basis and depend on the seasonality of their products. We host vendors that have a legacy of over 5 generations of farming and also allow space for new businesses to get their start at our market. Browse our list of vendors below to learn more.
         </p>
         <p class="editable" data-cms-index="2" data-cms-source="/vendors.html">
-          Interested in becoming a vendor? Contact our general manager at <a>info@mplsfarmersmarket.com</a>. We are currently accepting applications for local growers.
+          Interested in becoming a vendor? We are currently accepting applications for local growers. If you want more information, please visit the market office during operational hours and ask for a manager.
         </p>
       </div>
     </div>
