Updated 17 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta charset="utf-8">
     <title>Home - Minneapolis Farmers Market</title>
-    <link data-cms-original-href="/assets/css/main.css" href="/assets/css/main.css?_cchid=354a3210bb8bc82516445f69c90f4c56" rel="stylesheet">
+    <link data-cms-original-href="/assets/css/main.css" href="/assets/css/main.css?_cchid=0b9fcceae0bc0bd79eaedb98f0b0fa5c" rel="stylesheet">
     <link data-cms-original-href="/assets/img/favicon.ico" href="/assets/img/favicon.ico?_cchid=86619d0912985ed9ceace094e56b1a2d" rel="icon" type="image/x-icon">
     <!-- <script src="https://www.mplsfarmersmarket.com/assets/js/default.js"></script> -->
     <!-- <script src="https://www.mplsfarmersmarket.com/assets/js/mailchimp.js"></script> -->
@@ -192,6 +192,27 @@
   </div>
   <div class="col-12 col-lg-6 home-hero-img">
     <img alt="Market" class="img-fluid" data-cms-original-src="assets/img/home-hero-image.png" src="/assets/img/home-hero-image.png?_cchid=b09944d36466877c65934c91b1044524">
+  </div>
+</div>
+
+  <div class="row align-items-center farmers-market-week">
+  <div class="col-12 col-lg-6">
+    <div class="section-image-wrap position-relative">
+      <img alt="Woman smiling and handling paperwork at the market" class="img-fluid main-image position-relative" data-cms-original-src="assets/img/farmers-market-week-image.jpg" src="/assets/img/farmers-market-week-image.jpg?_cchid=8f92d36bbfc4130158534531ca675fd8">
+      <!--<img class="img-fluid position-absolute video-icon" src="assets/img/player-icon.svg" alt="video player icon" />-->
+    </div>
+  </div>
+  <div class="col-12 col-lg-6 heavy-padding">
+    <h3 class="editable" data-cms-index="0" data-cms-source="/_includes/home-national-farmers-market-week.html">
+      National Farmers Market Week | MPLS Farmers Market 2022 Celebration
+    </h3>
+    <p class="editable" data-cms-index="1" data-cms-source="/_includes/home-national-farmers-market-week.html">
+      We are the Mpls Farmers Market, the largest open-air market in the upper Midwest. Representing a rich diversity of cultures and specializing in just about everything.
+    </p>
+    <p class="editable" data-cms-index="2" data-cms-source="/_includes/home-national-farmers-market-week.html">
+      Visit the Minneapolis Farmers Market on August 13th for live music, cooking competitions, giveaways, and more. We can’t wait to see you there!
+    </p>
+    <a class="btn btn-lg theme-button" href="https://vimeo.com/723843411" rel="noopener noreferrer" role="button" target="_blank">Watch Video</a>
   </div>
 </div>
 
