--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <p class="editable" data-cms-index="2" data-cms-source="/_includes/home-national-farmers-market-week.html">
       Visit the Minneapolis Farmers Market on August 13th for live music, cooking competitions, giveaways, and more. We can’t wait to see you there!
     </p>
-    <a class="btn btn-lg theme-button editable" data-cms-index="3" data-cms-source="/_includes/home-national-farmers-market-week.html" href="https://vimeo.com/723843411" rel="noopener noreferrer" role="button" target="_blank">Watch Video</a>
+    <a class="btn btn-lg theme-button editable" data-cms-index="3" data-cms-source="/_includes/home-national-farmers-market-week.html" href="https://www.eventbrite.com/e/national-farmers-market-week-mpls-farmers-market-2022-celebration-tickets-375388867207?aff=erelexpmlt" rel="noopener noreferrer" role="button" target="_blank">Watch Video</a>
   </div>
 </div>
 
