Updated 13 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta charset="utf-8">
     <title>Home - Minneapolis Farmers Market</title>
-    <link data-cms-original-href="/assets/css/main.css" href="/assets/css/main.css?_cchid=0b9fcceae0bc0bd79eaedb98f0b0fa5c" rel="stylesheet">
+    <link data-cms-original-href="/assets/css/main.css" href="/assets/css/main.css?_cchid=14ea741b24d3e0405bdd53261210cbe1" rel="stylesheet">
     <link data-cms-original-href="/assets/img/favicon.ico" href="/assets/img/favicon.ico?_cchid=86619d0912985ed9ceace094e56b1a2d" rel="icon" type="image/x-icon">
     <!-- <script src="https://www.mplsfarmersmarket.com/assets/js/default.js"></script> -->
     <!-- <script src="https://www.mplsfarmersmarket.com/assets/js/mailchimp.js"></script> -->
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","@context":"https://schema.org"}</script>
+{"headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -204,15 +204,15 @@
   </div>
   <div class="col-12 col-lg-6 heavy-padding">
     <h3 class="editable" data-cms-index="0" data-cms-source="/_includes/home-national-farmers-market-week.html">
-      National Farmers Market Week | MPLS Farmers Market 2022 Celebration
+      National Farmers Market Week Celebration
     </h3>
     <p class="editable" data-cms-index="1" data-cms-source="/_includes/home-national-farmers-market-week.html">
-      We are the Mpls Farmers Market, the largest open-air market in the upper Midwest. Representing a rich diversity of cultures and specializing in just about everything.
+      Our goal was to celebrate our rich history, uplift our local farming community, thank our market operators, celebrate the diversity of cultures represented, and share all the goodness we bring to our community as the largest open-air farmers market in the State of Minnesota.
     </p>
     <p class="editable" data-cms-index="2" data-cms-source="/_includes/home-national-farmers-market-week.html">
-      Visit the Minneapolis Farmers Market on August 13th for live music, cooking competitions, giveaways, and more. We can’t wait to see you there!
+      On behalf of the MPLS Farmers Market Vendors &amp; Staff we want to thank each and every one of you from the bottom of my heart.&nbsp;
     </p>
-    <a class="btn btn-lg theme-button editable" data-cms-index="3" data-cms-source="/_includes/home-national-farmers-market-week.html" href="https://www.eventbrite.com/e/national-farmers-market-week-mpls-farmers-market-2022-celebration-tickets-375388867207?aff=erelexpmlt" rel="noopener noreferrer" role="button" target="_blank">Watch Video</a>
+    <a class="btn btn-lg theme-button editable" data-cms-index="3" data-cms-source="/_includes/home-national-farmers-market-week.html" href="https://youtu.be/f9hVtrlBp8c" rel="noopener noreferrer" role="button" target="_blank">Watch Video</a>
   </div>
 </div>
 
@@ -233,8 +233,7 @@
     </div>
     <div class="col-12 col-lg-6 home-market-info home-market-2 editable" data-cms-index="1" data-cms-source="/_includes/home-market-info.html">
       <h5>Nicollet Mall Market</h5>
-      <p><strong>Open every Thursday,&nbsp;<strong>June 16</strong></strong></p>
-      <p><strong> Rain or Shine 10 am to 2:30 pm</strong></p>
+      <p><b>Closed for the Season</b></p>
       <p class="market-address">Nicollet Mall, in Downtown Minneapolis<br>between 6th and 9th streets</p>
       <p><a class="btn btn-lg theme-button" href="/nicollet-market" role="button">Learn More</a></p>
     </div>
