--- a/market-rules.html
+++ b/market-rules.html
@@ -2,7 +2,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta charset="utf-8">
     <title>Market Rules - Minneapolis Farmers Market</title>
-    <link data-cms-original-href="/assets/css/main.css" href="/assets/css/main.css?_cchid=0b9fcceae0bc0bd79eaedb98f0b0fa5c" rel="stylesheet">
+    <link data-cms-original-href="/assets/css/main.css" href="/assets/css/main.css?_cchid=14ea741b24d3e0405bdd53261210cbe1" rel="stylesheet">
     <link data-cms-original-href="/assets/img/favicon.ico" href="/assets/img/favicon.ico?_cchid=86619d0912985ed9ceace094e56b1a2d" rel="icon" type="image/x-icon">
     <!-- <script src="https://www.mplsfarmersmarket.com/assets/js/default.js"></script> -->
     <!-- <script src="https://www.mplsfarmersmarket.com/assets/js/mailchimp.js"></script> -->
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"headline":"Market Rules","@type":"WebPage","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/market-rules.html","@context":"https://schema.org"}</script>
+{"headline":"Market Rules","@type":"WebPage","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","url":"https://www.mplsfarmersmarket.com/market-rules.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
