Updated 2 files via CloudCannon

--- a/nicollet-market.html
+++ b/nicollet-market.html
@@ -191,10 +191,10 @@
           Nicollet Mall Market
         </h2>
         <h5 class="editable" data-cms-index="1" data-cms-source="/nicollet-market.html">
-          <strong><strong>Open every Thursday, Starting&nbsp;<strong>June 16</strong></strong></strong>
+          <b>Closed for the season</b>
         </h5>
         <p class="market-page-hours editable" data-cms-index="2" data-cms-source="/nicollet-market.html">
-          10 am to 2:30 pm | Rain or Shine<br>EBT Hours 10 am to 2:30 pm
+          
         </p>
         <p class="market-page-address editable" data-cms-index="3" data-cms-source="/nicollet-market.html">
           Nicollet Mall, in Downtown Minneapolis<br>between 6th and 9th streets
