Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <p class="editable" data-cms-index="2" data-cms-source="/_includes/home-national-farmers-market-week.html">
       On behalf of the MPLS Farmers Market Vendors &amp; Staff we want to thank each and every one of you from the bottom of my heart.&nbsp;
     </p>
-    <a class="btn btn-lg theme-button editable" data-cms-index="3" data-cms-source="/_includes/home-national-farmers-market-week.html" href="https://youtu.be/f9hVtrlBp8c" rel="noopener noreferrer" role="button" target="_blank">Watch Video</a>
+    <a class="btn btn-lg theme-button editable" data-cms-index="3" data-cms-source="/_includes/home-national-farmers-market-week.html" href="https://youtu.be/f9hVtrlBp8c" rel="noopener noreferrer" role="button" target="_blank">Watch Recap Video</a>
   </div>
 </div>
 
@@ -228,6 +228,7 @@
       <p><strong>Open Daily Rain or Shine 6 am to 1 pm</strong></p>
       <p>Monday - Friday we have a limited amount of vendors, depending on the seasonality of produce.&nbsp;</p>
       <p>Saturday &amp; Sundays we have a full Market.&nbsp;</p>
+      <p>Winter Market Starts November 1st</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
     </div>
