--- a/index.html
+++ b/index.html
@@ -225,10 +225,29 @@
     <div class="col-12 col-lg-6 home-market-info left-column editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
       <p>We're sorry, no dogs are allowed!</p>
-      <p><strong>Open Daily Rain or Shine 6 am to 1 pm</strong></p>
-      <p>Monday - Friday we have a limited amount of vendors, depending on the seasonality of produce.&nbsp;</p>
-      <p>Saturday &amp; Sundays we have a full Market.&nbsp;</p>
-      <p>Winter Market Starts November 1st</p>
+      <p><strong>Open Daily Rain or Shine 6 am to 1 pm Until Oct 31st</strong></p>
+      <p><strong>2022 - 2023</strong></p>
+      <p><strong>Fall &amp; Winter Schedule</strong></p>
+      <p>OPEN DAILY 6 am to 1 pm&nbsp;</p>
+      <p>September thru October 31st</p>
+      <p><strong>OPEN IN THE WINTER</strong></p>
+      <p><em>Select Dates - 9 am to Noon</em></p>
+      <p>November 5th &amp; 6th</p>
+      <p>November 12th &amp; 13th</p>
+      <p><strong>Christmas Tree Vendors</strong><strong><em>&nbsp;</em></strong></p>
+      <p><em>Open Daily 1 Week Before Thanksgiving&nbsp;</em></p>
+      <p><em>Nov. 17th Thru X-mas</em></p>
+      <p>November 19th &amp; 20th</p>
+      <p>November 26th &amp; 27th</p>
+      <p>December 3rd</p>
+      <p>December 10th</p>
+      <p>December 17th</p>
+      <p>January 7th</p>
+      <p>January 21st</p>
+      <p>February 4th</p>
+      <p>February 18th</p>
+      <p>March 4th</p>
+      <p>March 18th</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
     </div>
