--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <meta content="@MplsFarmMarket" name="twitter:site">
 <meta content="https://www.facebook.com/MplsFarmersMarket/" property="article:publisher">
 <script type="application/ld+json">
-{"headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","@context":"https://schema.org"}</script>
+{"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"name":"Minneapolis Farmers Market","url":"https://www.mplsfarmersmarket.com/","headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
