--- a/index.html
+++ b/index.html
@@ -225,11 +225,7 @@
     <div class="col-12 col-lg-6 home-market-info left-column editable" data-cms-index="0" data-cms-source="/_includes/home-market-info.html" id="home-market-one">
       <h5>Minneapolis Farmers Market</h5>
       <p>We're sorry, no dogs are allowed!</p>
-      <p><strong>Open Daily Rain or Shine 6 am to 1 pm Until Oct 31st</strong></p>
-      <p><strong>2022 - 2023</strong></p>
-      <p><strong>Fall &amp; Winter Schedule</strong></p>
-      <p>OPEN DAILY 6 am to 1 pm&nbsp;</p>
-      <p>September thru October 31st</p>
+      <p>EBT is closed for the winter.</p>
       <p><strong>OPEN IN THE WINTER</strong></p>
       <p><em>Select Dates - 9 am to Noon</em></p>
       <p>November 5th &amp; 6th</p>
